feat: new configurators-docker sub project, lighter implem only dedicated to docker